Update 'adqayulny-nodejs' component image to: quay.io/rhtap_qe/rhtap-qe-nodejs:07c20d3539eea3690105ccf05e26ce43a6e67942@sha256:8482773c4d12da2811f9fccaf579e329a96eb7290a0f33991aa1001398c9116c

--- a/components/adqayulny-nodejs/overlays/development/deployment-patch.yaml
+++ b/components/adqayulny-nodejs/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: adqayulny-nodejs
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-nodejs:07c20d3539eea3690105ccf05e26ce43a6e67942@sha256:8482773c4d12da2811f9fccaf579e329a96eb7290a0f33991aa1001398c9116c
+          name: container-image
